<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="gr.teilar.ordercoffe.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderCoffeMessage"
        android:textColor="#ff0000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/tempRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">
        <RadioButton
            android:id="@+id/coldRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cold" />

        <RadioButton
            android:id="@+id/hotRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hot" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/sugarCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:layout_marginTop="20sp"/>

    <CheckBox
        android:id="@+id/milkCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/milk"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_marginTop="20sp"
        android:onClick="handleOrder"/>

</LinearLayout>
